--- a/index.html
+++ b/index.html
@@ -1,12 +1,42 @@
+<!--Alexander Pellas's Website - Soccer Gods-->
 <!DOCTYPE html>
 <html>
 <head>
   <title>Soccer Gods</title>
 </head>
 <body>
+  <header>
+    <nav>
+
+    </nav>
+  </header>
   <ul>
-    <li>Messi</li>
-    <li>Ronaldo</li>
+    <li>Lionel Messi</li>
+    <li>Cristiano Ronaldo</li>
+    <li>Manuel Neuer</li>
   </ul>
+  <p></p>
+  <table>
+    <tr>
+      <th>Photo</th>
+      <th>Player Name</th>
+      <th>FIFA Player Rating</th>
+    </tr>
+    <tr>
+      <td></td>
+      <td>Lionel Messi</td>
+      <td></td>
+    </tr>
+    <tr>
+      <td></td>
+      <td>Cristiano Ronaldo</td>
+      <td></td>
+    </tr>
+    <tr>
+      <td></td>
+      <td>Manuel Neuer</td>
+      <td></td>
+    </tr>
+  </table>
 </body>
 </html>
