Add nested lists, images, navigation link list, and paragraph.

--- a/index.html
+++ b/index.html
@@ -1,42 +1,59 @@
-<!--Alexander Pellas's Website - Soccer Gods-->
 <!DOCTYPE html>
+<!--Alexander Pellas's Website - Soccer Gods-->
 <html>
-<head>
-  <title>Soccer Gods</title>
-</head>
-<body>
-  <header>
-    <nav>
-
-    </nav>
-  </header>
-  <ul>
-    <li>Lionel Messi</li>
-    <li>Cristiano Ronaldo</li>
-    <li>Manuel Neuer</li>
-  </ul>
-  <p></p>
-  <table>
-    <tr>
-      <th>Photo</th>
-      <th>Player Name</th>
-      <th>FIFA Player Rating</th>
-    </tr>
-    <tr>
-      <td></td>
-      <td>Lionel Messi</td>
-      <td></td>
-    </tr>
-    <tr>
-      <td></td>
-      <td>Cristiano Ronaldo</td>
-      <td></td>
-    </tr>
-    <tr>
-      <td></td>
-      <td>Manuel Neuer</td>
-      <td></td>
-    </tr>
-  </table>
-</body>
+  <head>
+    <title>Soccer Gods</title>
+  </head>
+  <body>
+    <header>
+      <nav>
+        <a href="https://en.wikipedia.org/wiki/Lionel_Messi">Lionel Messi</a>
+        <a href="https://en.wikipedia.org/wiki/Cristiano_Ronaldo">Cristiano Ronaldo</a>
+        <a href="https://en.wikipedia.org/wiki/Manuel_Neuer">Manuel Neuer</a>
+      </nav>
+    </header>
+    <ul>
+      <li>Lionel Messi</li>
+        <ul>
+          <li>Birth Year: 1987</li>
+          <li>Height: 5'7"</li>
+          <li>Preferred Foot: Left</li>
+        </ul>
+      <li>Cristiano Ronaldo</li>
+        <ul>
+          <li>Birth Year: 1985</li>
+          <li>Height: 6'1"</li>
+          <li>Preferred Foot: Right</li>
+        </ul>
+      <li>Manuel Neuer</li>
+        <ul>
+          <li>Birth Year: 1986</li>
+          <li>Height: 6'4"</li>
+          <li>Preferred Foot: Right</li>
+        </ul>
+    </ul>
+    <p>In the table below, the current Soccer Gods of the world are stacked-up against eachother by FIFA 2016's Overall Player Rating.</p>
+    <table border="1">
+      <tr>
+        <th>Photo</th>
+        <th>Player Name</th>
+        <th>FIFA Player Rating</th>
+      </tr>
+      <tr>
+        <td><img src="images/messi.jpg" alt="Lionel Messi" height="35" width="35"></td>
+        <td>Lionel Messi</td>
+        <td>94</td>
+      </tr>
+      <tr>
+        <td><img src="images/ronaldo.jpeg" alt="Cristiano Ronaldo" height="35" width="35"></td>
+        <td>Cristiano Ronaldo</td>
+        <td>93</td>
+      </tr>
+      <tr>
+        <td><img src="images/neuer.jpeg" alt="Manuel Neuer" height="35" width="35"></td>
+        <td>Manuel Neuer</td>
+        <td>90</td>
+      </tr>
+    </table>
+  </body>
 </html>
