--- a/index.html
+++ b/index.html
@@ -33,24 +33,24 @@
         </ul>
     </ul>
     <p>In the table below, the current Soccer Gods of the world are stacked-up against eachother by FIFA 2016's Overall Player Rating.</p>
-    <table border="1">
+    <table border="1" width="100%">
       <tr>
         <th>Photo</th>
         <th>Player Name</th>
         <th>FIFA Player Rating</th>
       </tr>
       <tr>
-        <td><img src="images/messi.jpg" alt="Lionel Messi" height="35" width="35"></td>
+        <td><img src="http://futhead.cursecdn.com/static/img/14/players/158023.png" alt="Lionel Messi" height="50" width="50"></td>
         <td>Lionel Messi</td>
         <td>94</td>
       </tr>
       <tr>
-        <td><img src="images/ronaldo.jpeg" alt="Cristiano Ronaldo" height="35" width="35"></td>
+        <td><img src="http://futhead.cursecdn.com/static/img/14/players/20801.png" alt="Cristiano Ronaldo" height="50" width="50"></td>
         <td>Cristiano Ronaldo</td>
         <td>93</td>
       </tr>
       <tr>
-        <td><img src="images/neuer.jpeg" alt="Manuel Neuer" height="35" width="35"></td>
+        <td><img src="http://futhead.cursecdn.com/static/img/15/players/167495.png" alt="Manuel Neuer" height="50" width="50"></td>
         <td>Manuel Neuer</td>
         <td>90</td>
       </tr>
