Fix cosmetics of page.

--- a/index.html
+++ b/index.html
@@ -6,54 +6,59 @@
   </head>
   <body>
     <header>
+      <h1>Soccer Gods</h1>
       <nav>
         <a href="https://en.wikipedia.org/wiki/Lionel_Messi">Lionel Messi</a>
         <a href="https://en.wikipedia.org/wiki/Cristiano_Ronaldo">Cristiano Ronaldo</a>
         <a href="https://en.wikipedia.org/wiki/Manuel_Neuer">Manuel Neuer</a>
       </nav>
     </header>
-    <ul>
-      <li>Lionel Messi</li>
-        <ul>
-          <li>Birth Year: 1987</li>
-          <li>Height: 5'7"</li>
-          <li>Preferred Foot: Left</li>
-        </ul>
-      <li>Cristiano Ronaldo</li>
-        <ul>
-          <li>Birth Year: 1985</li>
-          <li>Height: 6'1"</li>
-          <li>Preferred Foot: Right</li>
-        </ul>
-      <li>Manuel Neuer</li>
-        <ul>
-          <li>Birth Year: 1986</li>
-          <li>Height: 6'4"</li>
-          <li>Preferred Foot: Right</li>
-        </ul>
-    </ul>
-    <p>In the table below, the current Soccer Gods of the world are stacked-up against eachother by FIFA 2016's Overall Player Rating.</p>
-    <table border="1" width="100%">
-      <tr>
-        <th>Photo</th>
-        <th>Player Name</th>
-        <th>FIFA Player Rating</th>
-      </tr>
-      <tr>
-        <td><img src="http://futhead.cursecdn.com/static/img/14/players/158023.png" alt="Lionel Messi" height="50" width="50"></td>
-        <td>Lionel Messi</td>
-        <td>94</td>
-      </tr>
-      <tr>
-        <td><img src="http://futhead.cursecdn.com/static/img/14/players/20801.png" alt="Cristiano Ronaldo" height="50" width="50"></td>
-        <td>Cristiano Ronaldo</td>
-        <td>93</td>
-      </tr>
-      <tr>
-        <td><img src="http://futhead.cursecdn.com/static/img/15/players/167495.png" alt="Manuel Neuer" height="50" width="50"></td>
-        <td>Manuel Neuer</td>
-        <td>90</td>
-      </tr>
-    </table>
+    <section>
+      <ul>
+        <li>Lionel Messi</li>
+          <ul>
+            <li>Birth Year: 1987</li>
+            <li>Height: 5'7"</li>
+            <li>Preferred Foot: Left</li>
+          </ul>
+        <li>Cristiano Ronaldo</li>
+          <ul>
+            <li>Birth Year: 1985</li>
+            <li>Height: 6'1"</li>
+            <li>Preferred Foot: Right</li>
+          </ul>
+        <li>Manuel Neuer</li>
+          <ul>
+            <li>Birth Year: 1986</li>
+            <li>Height: 6'4"</li>
+            <li>Preferred Foot: Right</li>
+          </ul>
+      </ul>
+    </section>
+    <article>
+      <p>In the table below, the current Soccer Gods of the world are stacked-up against eachother by FIFA 2016's Overall Player Rating.</p>
+      <table border="1" width="100%">
+        <tr>
+          <th>Photo</th>
+          <th>Player Name</th>
+          <th>FIFA Player Rating</th>
+        </tr>
+        <tr>
+          <td><img alt="Lionel Messi" title="Credit: FutHead.com" src="http://futhead.cursecdn.com/static/img/14/players/158023.png" alt="Lionel Messi" height="100" width="100"></td>
+          <td>Lionel Messi</td>
+          <td>94</td>
+        </tr>
+        <tr>
+          <td><img alt="Cristiano Ronaldo" title="Credit: FutHead.com" src="http://futhead.cursecdn.com/static/img/14/players/20801.png" alt="Cristiano Ronaldo" height="100" width="100"></td>
+          <td>Cristiano Ronaldo</td>
+          <td>93</td>
+        </tr>
+        <tr>
+          <td><img alt="Manuel Neuer" title="Credit: FutHead.com" src="http://futhead.cursecdn.com/static/img/15/players/167495.png" alt="Manuel Neuer" height="100" width="100"></td>
+          <td>Manuel Neuer</td>
+          <td>90</td>
+        </tr>
+      </table>
+    </article>
   </body>
 </html>
