Add formatting to table.

--- a/index.html
+++ b/index.html
@@ -15,23 +15,23 @@
     </header>
     <section>
       <ul>
-        <li>Lionel Messi</li>
+        <li><strong>Lionel Messi</strong></li>
           <ul>
-            <li>Birth Year: 1987</li>
-            <li>Height: 5'7"</li>
-            <li>Preferred Foot: Left</li>
+            <li><em>Birth Year</em>: 1987</li>
+            <li><em>Height</em>: 5'7"</li>
+            <li><em>Preferred Foot</em>: Left</li>
           </ul>
-        <li>Cristiano Ronaldo</li>
+        <li><strong>Cristiano Ronaldo</strong></li>
           <ul>
-            <li>Birth Year: 1985</li>
-            <li>Height: 6'1"</li>
-            <li>Preferred Foot: Right</li>
+            <li><em>Birth Year</em>: 1985</li>
+            <li><em>Height</em>: 6'1"</li>
+            <li><em>Preferred Foot</em>: Right</li>
           </ul>
-        <li>Manuel Neuer</li>
+        <li><strong>Manuel Neuer</strong></li>
           <ul>
-            <li>Birth Year: 1986</li>
-            <li>Height: 6'4"</li>
-            <li>Preferred Foot: Right</li>
+            <li><em>Birth Year</em>: 1986</li>
+            <li><em>Height</em>: 6'4"</li>
+            <li><em>Preferred Foot</em>: Right</li>
           </ul>
       </ul>
     </section>
