Bold one section - test.

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       </ul>
     </section>
     <article>
-      <p>In the table below, the current Soccer Gods of the world are stacked-up against each other using FIFA 2016's Overall Player Rating.</p>
+      <p>In the table below, the current <strong>Soccer Gods</strong> of the world are stacked-up against each other using FIFA 2016's Overall Player Rating.</p>
       <table border="1" width="100%">
         <tr>
           <th>Photo</th>
