Switch strong with b and em with i.

--- a/index.html
+++ b/index.html
@@ -15,28 +15,28 @@
     </header>
     <section>
       <ul>
-        <li><strong>Lionel Messi</strong></li>
+        <li><b>Lionel Messi</b></li>
           <ul>
-            <li><em>Birth Year</em>: 1987</li>
-            <li><em>Height</em>: 5'7"</li>
-            <li><em>Preferred Foot</em>: Left</li>
+            <li><i>Birth Year</i>: 1987</li>
+            <li><i>Height</i>: 5'7"</li>
+            <li><i>Preferred Foot</i>: Left</li>
           </ul>
-        <li><strong>Cristiano Ronaldo</strong></li>
+        <li><b>Cristiano Ronaldo</b></li>
           <ul>
-            <li><em>Birth Year</em>: 1985</li>
-            <li><em>Height</em>: 6'1"</li>
-            <li><em>Preferred Foot</em>: Right</li>
+            <li><i>Birth Year</i>: 1985</li>
+            <li><i>Height</i>: 6'1"</li>
+            <li><i>Preferred Foot</i>: Right</li>
           </ul>
-        <li><strong>Manuel Neuer</strong></li>
+        <li><b>Manuel Neuer</b></li>
           <ul>
-            <li><em>Birth Year</em>: 1986</li>
-            <li><em>Height</em>: 6'4"</li>
-            <li><em>Preferred Foot</em>: Right</li>
+            <li><i>Birth Year</i>: 1986</li>
+            <li><i>Height</i>: 6'4"</li>
+            <li><i>Preferred Foot</i>: Right</li>
           </ul>
       </ul>
     </section>
     <article>
-      <p>In the table below, the current <strong>Soccer Gods</strong> of the world are stacked-up against each other using FIFA 2016's Overall Player Rating.</p>
+      <p>In the table below, the current <b>Soccer Gods</b> of the world are stacked-up against each other using FIFA 2016's Overall Player Rating.</p>
       <table border="1" width="100%">
         <tr>
           <th>Photo</th>
