--- a/index.html
+++ b/index.html
@@ -15,28 +15,28 @@
     </header>
     <section>
       <ul>
-        <li><b>Lionel Messi</b></li>
+        <li>Lionel Messi</li>
           <ul>
-            <li><i>Birth Year</i>: 1987</li>
-            <li><i>Height</i>: 5'7"</li>
-            <li><i>Preferred Foot</i>: Left</li>
+            <li>Birth Year: 1987</li>
+            <li>Height: 5'7"</li>
+            <li>Preferred Foot: Left</li>
           </ul>
-        <li><b>Cristiano Ronaldo</b></li>
+        <li>Cristiano Ronaldo</li>
           <ul>
-            <li><i>Birth Year</i>: 1985</li>
-            <li><i>Height</i>: 6'1"</li>
-            <li><i>Preferred Foot</i>: Right</li>
+            <li>Birth Year: 1985</li>
+            <li>Height: 6'1"</li>
+            <li>Preferred Foot: Right</li>
           </ul>
-        <li><b>Manuel Neuer</b></li>
+        <li>Manuel Neuer</li>
           <ul>
-            <li><i>Birth Year</i>: 1986</li>
-            <li><i>Height</i>: 6'4"</li>
-            <li><i>Preferred Foot</i>: Right</li>
+            <li>Birth Year: 1986</li>
+            <li>Height: 6'4"</li>
+            <li>Preferred Foot: Right</li>
           </ul>
       </ul>
     </section>
     <article>
-      <p>In the table below, the current <b>Soccer Gods</b> of the world are stacked-up against each other using FIFA 2016's Overall Player Rating.</p>
+      <p>In the table below, the current Soccer Gods of the world are stacked-up against each other using FIFA 2016's Overall Player Rating.</p>
       <table border="1" width="100%">
         <tr>
           <th>Photo</th>
