Add headers to sections.

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <body>
     <header>
       <h1>Soccer Gods</h1>
+      <h6>Wiki Links</h6>
       <nav>
         <a href="https://en.wikipedia.org/wiki/Lionel_Messi">Lionel Messi</a>
         <a href="https://en.wikipedia.org/wiki/Cristiano_Ronaldo">Cristiano Ronaldo</a>
@@ -14,6 +15,7 @@
       </nav>
     </header>
     <section>
+      <h6>Player Outlines</h6>
       <ul>
         <li>Lionel Messi</li>
           <ul>
@@ -36,6 +38,7 @@
       </ul>
     </section>
     <article>
+      <h6>Player Ratings</h6>
       <p>In the table below, the current Soccer Gods of the world are stacked-up against each other using FIFA 2016's Overall Player Rating.</p>
       <table border="1" width="100%">
         <tr>
