--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <html>
   <head>
     <title>Soccer Gods</title>
+    <link rel="stylesheet" type="text/css" href="css/styles.css">
   </head>
   <body>
     <header>
