--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <title>Alexander Pellas | Web Developer</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-
+  <link rel="icon" href="./images/apellas-llc-logo.png">
   <!--  Flex Template http://www.templatemo.com/tm-406-flex -->
   <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700,800' rel='stylesheet' type='text/css'>
 
@@ -28,16 +28,15 @@
 
 <div class="site-main" id="sTop">
   <div class="site-header">
-
     <div class="container">
       <div class="row">
         <div class="col-md-12 text-center">
           <ul class="social-icons">
             <li><a href="https://github.com/alexpadraic" class="fa fa-github"></a></li>
             <li><a href="https://www.linkedin.com/in/alexander-pellas" class="fa fa-linkedin"></a></li>
-            <li><a href="https://medium.com/@alexpadraic" class="fa fa-medium"></a></li>
+            <!-- <li><a href="https://medium.com/@alexpadraic" class="fa fa-medium"></a></li> -->
             <li><a href="https://twitter.com/alexpadraic" class="fa fa-twitter"></a></li>
-            <li><a href="https://www.facebook.com/alexpellas" class="fa fa-facebook"></a></li>
+            <!-- <li><a href="https://www.facebook.com/alexpellas" class="fa fa-facebook"></a></li> -->
           </ul>
         </div> <!-- /.col-md-12 -->
       </div> <!-- /.row -->
@@ -56,6 +55,7 @@
               <div class="toggle-menu visible-sm visible-xs"><i class="fa fa-bars"></i></div>
               <ul class="menu-first">
                 <li class="active"><a href="#">Home</a></li>
+                <li><a href="#summary">Summary</a></li>
                 <li><a href="#skills">Skills</a></li>
                 <li><a href="#portfolio">Portfolio</a></li>
                 <li><a href="#contact">Contact</a></li>
@@ -74,88 +74,156 @@
           <li>
             <div class="overlay"></div>
             <img src="images/sf-downtown (1).jpg" alt="">
-            <div class="slider-caption visible-md visible-lg">
+<!--             <div class="slider-caption visible-md visible-lg">
               <h2>Github</h2>
               <p><a href="https://github.com/alexpadraic" class="slider-btn fa fa-github"></a></p>
-            </div>
+            </div> -->
           </li>
           <li>
             <div class="overlay"></div>
             <img src="images/ny-blue (1).jpg" alt="">
-            <div class="slider-caption visible-md visible-lg">
+<!--             <div class="slider-caption visible-md visible-lg">
               <h2>LinkedIn</h2>
               <p><a href="https://www.linkedin.com/in/alexander-pellas" class="slider-btn fa fa-linkedin"></a></p>
-            </div>
+            </div> -->
           </li>
           <li>
             <div class="overlay"></div>
             <img src="images/sf-ferry (1).jpg" alt="">
-            <div class="slider-caption visible-md visible-lg">
+<!--             <div class="slider-caption visible-md visible-lg">
               <h2>Medium</h2>
               <p><a href="https://medium.com/@alexpadraic" class="slider-btn fa fa-medium"></a></p>
-            </div>
+            </div> -->
           </li>
           <li>
             <div class="overlay"></div>
             <img src="images/ny-empire (1).jpg" alt="">
-            <div class="slider-caption visible-md visible-lg">
+<!--             <div class="slider-caption visible-md visible-lg">
               <h2>Twitter</h2>
               <p><a href="https://twitter.com/alexpadraic" class="slider-btn fa fa-twitter"></a></p>
-            </div>
+            </div> -->
           </li>
           <li>
             <div class="overlay"></div>
             <img src="images/sf-gg (1).jpg" alt="">
-            <div class="slider-caption visible-md visible-lg">
+<!--             <div class="slider-caption visible-md visible-lg">
               <h2>Facebook</h2>
               <p><a href="https://www.facebook.com/alexpellas" class="slider-btn fa fa-facebook"></a></p>
-            </div>
+            </div> -->
           </li>
           <li>
             <div class="overlay"></div>
             <img src="images/ny-mid (1).jpg" alt="">
-            <div class="slider-caption visible-md visible-lg">
+<!--             <div class="slider-caption visible-md visible-lg">
               <h2>Github</h2>
               <p><a href="https://github.com/alexpadraic" class="slider-btn fa fa-github"></a></p>
-            </div>
+            </div> -->
           </li>
           <li>
             <div class="overlay"></div>
             <img src="images/sf-karl (1).jpg" alt="">
-            <div class="slider-caption visible-md visible-lg">
+<!--             <div class="slider-caption visible-md visible-lg">
               <h2>LinkedIn</h2>
               <p><a href="https://www.linkedin.com/in/alexander-pellas" class="slider-btn fa fa-linkedin"></a></p>
-            </div>
+            </div> -->
           </li>
           <li>
             <div class="overlay"></div>
             <img src="images/ny-midtown (1).jpg" alt="">
-            <div class="slider-caption visible-md visible-lg">
+<!--             <div class="slider-caption visible-md visible-lg">
               <h2>Medium</h2>
               <p><a href="https://medium.com/@alexpadraic" class="slider-btn fa fa-medium"></a></p>
-            </div>
+            </div> -->
           </li>
           <li>
             <div class="overlay"></div>
             <img src="images/sf-transam (1).jpg" alt="">
-            <div class="slider-caption visible-md visible-lg">
+<!--             <div class="slider-caption visible-md visible-lg">
               <h2>Twitter</h2>
               <p><a href="https://twitter.com/alexpadraic" class="slider-btn fa fa-twitter"></a></p>
-            </div>
+            </div> -->
           </li>
           <li>
             <div class="overlay"></div>
             <img src="images/ny-street.jpg" alt="">
-            <div class="slider-caption visible-md visible-lg">
+<!--             <div class="slider-caption visible-md visible-lg">
               <h2>Facebook</h2>
               <p><a href="https://www.facebook.com/alexpellas" class="slider-btn fa fa-facebook"></a></p>
-            </div>
+            </div> -->
           </li>
         </ul>
       </div> <!-- /.flexslider -->
     </div> <!-- /.slider -->
   </div> <!-- /.site-slider -->
 </div> <!-- /.site-main -->
+
+
+<div class="content-section" id="summary">
+  <div class="container">
+
+    <div class="row">
+      <div class="heading-section col-md-12 text-center">
+        <h2>Summary</h2>
+        <p class="small-text">"Never let your schooling get in the way of your education"</p>
+        <p><a href="https://en.wikipedia.org/wiki/Mark_Twain">-Samuel Clemens</a></p>
+      </div> <!-- /.heading-section -->
+    </div> <!-- /.row -->
+
+    <div class="row">
+      <div class="col-md-8 col-sm-6">
+        <p class="summary-text">I am a thoroughly curious and driven young professional with a passion for problem-solving, social justice, the environment, and tech.<br><br>
+          Over my professional career, I have developed and sharpened a unique skill set of data analysis, mapping, web development, and financial accounting - though, the pace at which I was able to pick these up in a professional setting could be my most valuable asset. I am eager to leverage these skills for an exciting project to build both purpose and pleasure into my career.<br><br>
+          I am a natural leader who enjoys working in teams with distributed responsibility structures, democratic decision-making, and short feedback loops. I strive to excel in every venture, and I feel I bring the right mix of drive and composure that will be valuable in any work environment. If you or your company are looking to expand your development team and feel I could be a valuable addition, don’t hesitate to reach out. My email is alex.padraic@gmail.com.<!-- spacing for mobile viewing --><br><br>
+        </p>
+      </div> <!-- /.col-md-8 -->
+
+      <div class="col-md-4 col-sm-6">
+        <ul class="progess-bars">
+          <li>
+            <div class="progress">
+              <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width: 90%;">Ruby 90%</div>
+            </div>
+          </li>
+          <li>
+            <div class="progress">
+              <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%;">Rails 80%</div>
+            </div>
+          </li>
+          <li>
+            <div class="progress">
+              <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%;">Javascript 80%</div>
+            </div>
+          </li>
+          <li>
+            <div class="progress">
+              <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width: 90%;">SQL 90%</div>
+            </div>
+          </li>
+          <li>
+            <div class="progress">
+              <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width: 90%;">HTML CSS 90%</div>
+            </div>
+          </li>
+          <li>
+            <div class="progress">
+              <div class="progress-bar" role="progressbar" aria-valuenow="99" aria-valuemin="0" aria-valuemax="100" style="width: 99%;">Data Analysis 99%</div>
+            </div>
+          </li>
+          <li>
+            <div class="progress">
+              <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width: 70%;">Python 70%</div>
+            </div>
+          </li>
+          <li>
+            <div class="progress">
+              <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width: 70%;">Machine Learning 70%</div>
+            </div>
+          </li>
+        </ul>
+      </div> <!-- /.col-md-4 -->
+    </div> <!-- /.row -->
+  </div> <!-- /.container -->
+</div> <!-- /#services -->
 
 
 <div class="content-section" id="skills">
@@ -201,7 +269,7 @@
       <div class="col-md-3 col-sm-6">
         <div class="service-item" id="service-3">
           <div class="service-icon">
-            <i class="fa fa-cogs"></i>
+            <i class="fa fa-cloud-upload"></i>
           </div> <!-- /.service-icon -->
           <div class="service-content">
             <div class="inner-service">
@@ -215,7 +283,7 @@
       <div class="col-md-3 col-sm-6">
         <div class="service-item" id="service-4">
           <div class="service-icon">
-            <i class="fa sim_card"></i>
+            <i class="fa fa-cogs"></i>
           </div> <!-- /.service-icon -->
           <div class="service-content">
             <div class="inner-service">
@@ -226,51 +294,8 @@
         </div> <!-- /#service-1 -->
       </div> <!-- /.col-md-3 -->
     </div> <!-- /.row -->
-
-    <div class="row">
-      <div class="col-md-12 text-center">
-        <div class="skills-heading">
-          <h3 class="skills-title">Design Skills</h3>
-          <p class="small-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-        </div>
-      </div> <!-- /.col-md-12 -->
-    </div> <!-- /.row -->
-
-    <div class="row">
-      <div class="col-md-8 col-sm-6">
-        <p>I am a thoroughly curious and driven young professional with a passion for problem-solving, social justice, the environment, and tech.<br><br>
-          Over my professional career, I have developed and sharpened a unique skill set of data analysis, mapping, web development, and financial accounting - though, the pace at which I was able to pick these up in a professional setting could be my most valuable asset. I am eager to leverage these skills for an exciting project to build both purpose and pleasure into my career.<br><br>
-          I am a natural leader who enjoys working in teams with distributed responsibility structures, democratic decision-making, and short feedback loops. I strive to excel in every venture, and I feel I bring the right mix of drive and composure that will be valuable in any work environment. If you or your company are looking to expand your development team and feel I could be a valuable addition, don’t hesitate to reach out. My email is alex.padraic@gmail.com.<!-- spacing for mobile viewing --><br><br>
-        </p>
-      </div> <!-- /.col-md-8 -->
-
-      <div class="col-md-4 col-sm-6">
-        <ul class="progess-bars">
-          <li>
-            <div class="progress">
-              <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width: 90%;">Photoshop 90%</div>
-            </div>
-          </li>
-          <li>
-            <div class="progress">
-              <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%;">HTML CSS 80%</div>
-            </div>
-          </li>
-          <li>
-            <div class="progress">
-              <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width: 70%;">Development 70%</div>
-            </div>
-          </li>
-          <li>
-            <div class="progress">
-              <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%;">Marketing 80%</div>
-            </div>
-          </li>
-        </ul>
-      </div> <!-- /.col-md-4 -->
-    </div> <!-- /.row -->
-  </div> <!-- /.container -->
-</div> <!-- /#services -->
+  </div> <!-- /.skills-container -->
+</div> <!-- /.skills-main -->
 
 
 
@@ -314,11 +339,11 @@
 
       <div class="portfolio-item col-md-3 col-sm-6">
         <div class="portfolio-thumb">
-          <img src="images/gallery/p7.jpg" alt="">
+          <img src="images/gallery/flashcards.png" alt="">
           <div class="portfolio-overlay">
             <h3>Web FlashCards</h3>
             <p>[Insert ReadMe]</p>
-            <a href="images/gallery/p7.jpg" data-rel="lightbox" class="expand">
+            <a href="images/gallery/flashcards.png" data-rel="lightbox" class="expand">
               <i class="fa fa-search"></i>
             </a>
           </div> <!-- /.portfolio-overlay -->
@@ -352,7 +377,7 @@
     <div class="row">
       <div class="heading-section col-md-12 text-center">
         <h2>Team</h2>
-        <p>Our people are very united for your success</p>
+        <!-- <p>Our people are very united for your success</p> -->
       </div> <!-- /.heading-section -->
     </div> <!-- /.row -->
 
@@ -361,14 +386,14 @@
       </div> <!-- /.team-member -->
       <div class="team-member col-md-4 col-sm-4">
         <div class="member-thumb">
-          <img src="images/member1.jpg" alt="">
+          <img src="images/apellas-prisma.jpg" alt="">
           <div class="team-overlay">
-            <h3>Tracy</h3>
-            <span>Designer</span>
+            <h3>Alexander</h3>
+            <span>Developer | Analyst</span>
             <ul class="social">
-              <li><a href="#" class="fa fa-facebook"></a></li>
-              <li><a href="#" class="fa fa-twitter"></a></li>
-              <li><a href="#" class="fa fa-linkedin"></a></li>
+              <li><a href="https://github.com/alexpadraic" class="fa fa-github"></a></li>
+              <li><a href="https://www.linkedin.com/in/alexander-pellas" class="fa fa-linkedin"></a></li>
+              <li><a href="https://twitter.com/alexpadraic" class="fa fa-twitter"></a></li>
             </ul>
           </div> <!-- /.team-overlay -->
         </div> <!-- /.member-thumb -->
@@ -407,7 +432,7 @@
 
 <!-- Google Map Init-->
 <script type="text/javascript">
-// jQuery(function($){
+jQuery(function($){
 //   $('#map_canvas').gmap3({
 //     marker:{
 //       address: '37.769725, -122.462154'
