Clear unused images and add text to index

--- a/index.html
+++ b/index.html
@@ -47,9 +47,7 @@
         <div id="menu-wrapper">
           <div class="row">
             <div class="logo-wrapper col-md-2 col-sm-2">
-              <h1>
-                <a href="#">Alexander</a>
-              </h1>
+              <h1><a href="#">Alexander</a></h1>
             </div> <!-- /.logo-wrapper -->
             <div class="col-md-10 col-sm-10 main-menu text-right">
               <div class="toggle-menu visible-sm visible-xs"><i class="fa fa-bars"></i></div>
@@ -82,74 +80,38 @@
           <li>
             <div class="overlay"></div>
             <img src="images/ny-blue (1).jpg" alt="">
-<!--             <div class="slider-caption visible-md visible-lg">
-              <h2>LinkedIn</h2>
-              <p><a href="https://www.linkedin.com/in/alexander-pellas" class="slider-btn fa fa-linkedin"></a></p>
-            </div> -->
           </li>
           <li>
             <div class="overlay"></div>
             <img src="images/sf-ferry (1).jpg" alt="">
-<!--             <div class="slider-caption visible-md visible-lg">
-              <h2>Medium</h2>
-              <p><a href="https://medium.com/@alexpadraic" class="slider-btn fa fa-medium"></a></p>
-            </div> -->
           </li>
           <li>
             <div class="overlay"></div>
             <img src="images/ny-empire (1).jpg" alt="">
-<!--             <div class="slider-caption visible-md visible-lg">
-              <h2>Twitter</h2>
-              <p><a href="https://twitter.com/alexpadraic" class="slider-btn fa fa-twitter"></a></p>
-            </div> -->
           </li>
           <li>
             <div class="overlay"></div>
             <img src="images/sf-gg (1).jpg" alt="">
-<!--             <div class="slider-caption visible-md visible-lg">
-              <h2>Facebook</h2>
-              <p><a href="https://www.facebook.com/alexpellas" class="slider-btn fa fa-facebook"></a></p>
-            </div> -->
           </li>
           <li>
             <div class="overlay"></div>
             <img src="images/ny-mid (1).jpg" alt="">
-<!--             <div class="slider-caption visible-md visible-lg">
-              <h2>Github</h2>
-              <p><a href="https://github.com/alexpadraic" class="slider-btn fa fa-github"></a></p>
-            </div> -->
           </li>
           <li>
             <div class="overlay"></div>
             <img src="images/sf-karl (1).jpg" alt="">
-<!--             <div class="slider-caption visible-md visible-lg">
-              <h2>LinkedIn</h2>
-              <p><a href="https://www.linkedin.com/in/alexander-pellas" class="slider-btn fa fa-linkedin"></a></p>
-            </div> -->
           </li>
           <li>
             <div class="overlay"></div>
             <img src="images/ny-midtown (1).jpg" alt="">
-<!--             <div class="slider-caption visible-md visible-lg">
-              <h2>Medium</h2>
-              <p><a href="https://medium.com/@alexpadraic" class="slider-btn fa fa-medium"></a></p>
-            </div> -->
           </li>
           <li>
             <div class="overlay"></div>
             <img src="images/sf-transam (1).jpg" alt="">
-<!--             <div class="slider-caption visible-md visible-lg">
-              <h2>Twitter</h2>
-              <p><a href="https://twitter.com/alexpadraic" class="slider-btn fa fa-twitter"></a></p>
-            </div> -->
           </li>
           <li>
             <div class="overlay"></div>
             <img src="images/ny-street.jpg" alt="">
-<!--             <div class="slider-caption visible-md visible-lg">
-              <h2>Facebook</h2>
-              <p><a href="https://www.facebook.com/alexpellas" class="slider-btn fa fa-facebook"></a></p>
-            </div> -->
           </li>
         </ul>
       </div> <!-- /.flexslider -->
@@ -246,7 +208,7 @@
           <div class="service-content">
             <div class="inner-service">
               <h3>Front-End</h3>
-              <p>[desc]</p>
+              <p>Developed Javascript, HTML, and CSS capabilities over the past several years.<br>Have since developed front-end JS abilities with MEAN-stack Patrol crime-mapping project.</p>
             </div>
           </div> <!-- /.service-content -->
         </div> <!-- /#service-1 -->
@@ -269,11 +231,11 @@
       <div class="col-md-3 col-sm-6">
         <div class="service-item" id="service-3">
           <div class="service-icon">
-            <i class="fa fa-cloud-upload"></i>
+            <i class="fa fa-line-chart"></i>
           </div> <!-- /.service-icon -->
           <div class="service-content">
             <div class="inner-service">
-              <h3>Machine Learning</h3>
+              <h3>Data Analysis & Mapping</h3>
               <p>[desc]</p>
             </div>
           </div> <!-- /.service-content -->
@@ -287,7 +249,7 @@
           </div> <!-- /.service-icon -->
           <div class="service-content">
             <div class="inner-service">
-              <h3>Hardware</h3>
+              <h3>Machine Learning</h3>
               <p>[desc]</p>
             </div>
           </div> <!-- /.service-content -->
@@ -313,25 +275,28 @@
 
       <div class="portfolio-item col-md-3 col-sm-6">
         <div class="portfolio-thumb">
-          <img src="images/gallery/p1.jpg" alt="">
+          <img src="images/gallery/trash (1).jpg" alt="">
           <div class="portfolio-overlay">
-            <h3>Auto-Trash | CERBERUS</h3>
-            <p>[Insert ReadMe]</p>
-            <a href="images/gallery/p1.jpg" data-rel="lightbox" class="expand">
-              <i class="fa fa-search"></i>
+            <h3>Auto-Trash</h3>
+            <p>Auto-sorting trashcan using Tensorflow, Python, & RaspPi</p>
+            <a href="https://github.com/alexpadraic/chowsource" class="expand">
+              <i class="fa fa-github"></i>
             </a>
+<!--             <a href="images/gallery/trash (1).jpg" data-rel="lightbox" class="expand">
+              <i class="fa fa-search"></i>
+            </a> -->
           </div> <!-- /.portfolio-overlay -->
         </div> <!-- /.portfolio-thumb -->
       </div> <!-- /.portfolio-item -->
 
       <div class="portfolio-item col-md-3 col-sm-6">
         <div class="portfolio-thumb">
-          <img src="images/gallery/p2.jpg" alt="">
+          <img src="images/gallery/police.jpg" alt="">
           <div class="portfolio-overlay">
             <h3>Patrol</h3>
-            <p>[Insert ReadMe]</p>
-            <a href="images/gallery/p2.jpg" data-rel="lightbox" class="expand">
-              <i class="fa fa-search"></i>
+            <p>Crime data mapping web-app using MEAN stack</p>
+            <a href="https://github.com/alexpadraic/Patrol" class="expand">
+              <i class="fa fa-github"></i>
             </a>
           </div> <!-- /.portfolio-overlay -->
         </div> <!-- /.portfolio-thumb -->
@@ -339,12 +304,12 @@
 
       <div class="portfolio-item col-md-3 col-sm-6">
         <div class="portfolio-thumb">
-          <img src="images/gallery/flashcards.png" alt="">
+          <img src="images/gallery/study.jpg" alt="">
           <div class="portfolio-overlay">
             <h3>Web FlashCards</h3>
-            <p>[Insert ReadMe]</p>
-            <a href="images/gallery/flashcards.png" data-rel="lightbox" class="expand">
-              <i class="fa fa-search"></i>
+            <p>Sinatra app for study cards with user-auth</p>
+            <a href="https://github.com/alexpadraic/web-flashcards" class="expand">
+              <i class="fa fa-github"></i>
             </a>
           </div> <!-- /.portfolio-overlay -->
         </div> <!-- /.portfolio-thumb -->
@@ -352,12 +317,12 @@
 
       <div class="portfolio-item col-md-3 col-sm-6">
         <div class="portfolio-thumb">
-          <img src="images/gallery/p8.jpg" alt="">
+          <img src="images/gallery/food (1).jpg" alt="">
           <div class="portfolio-overlay">
             <h3>ChowSource</h3>
-            <p>[Insert ReadMe]</p>
-            <a href="images/gallery/p8.jpg" data-rel="lightbox" class="expand">
-              <i class="fa fa-search"></i>
+            <p>Rails app for crowd-sourcing recipes</p>
+            <a href="https://github.com/alexpadraic/chowsource" class="expand">
+              <i class="fa fa-github"></i>
             </a>
           </div> <!-- /.portfolio-overlay -->
         </div> <!-- /.portfolio-thumb -->
@@ -371,12 +336,12 @@
 
 
 
-<div class="content-section" id="our-team">
+<div class="content-section" id="contact">
   <div class="container">
 
     <div class="row">
       <div class="heading-section col-md-12 text-center">
-        <h2>Team</h2>
+        <h2>Contact</h2>
         <!-- <p>Our people are very united for your success</p> -->
       </div> <!-- /.heading-section -->
     </div> <!-- /.row -->
@@ -409,7 +374,7 @@
     <div class="row">
 
       <div class="col-md-8 col-xs-12 text-left">
-        <span>Copyright &copy; 2014 Company Name</span>
+        <span>Copyright &copy; 2016 APellas, LLC</span>
       </div> <!-- /.text-center -->
 
       <div class="col-md-4 hidden-xs text-right">
