Fix text box overflow on skill cards

--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
           <div class="service-content">
             <div class="inner-service">
               <h3>Back-End</h3>
-              <p>Built and manipulated SQL databases during my time at Marathon and Moffatt & Nichol.<br><br>Have used Postgres, MongoDB, MySQL, SQLite3, along with Ruby/ActiveRecord and JS/Mongoose to serve web-apps.</p>
+              <p>Built and manipulated SQL databases during my time at Marathon and M&N.<br><br>Have used Postgres, MongoDB, MySQL, SQLite3, along with ActiveRecord and Mongoose to serve web-apps.</p>
             </div>
           </div> <!-- /.service-content -->
         </div> <!-- /#service-1 -->
