--- a/index.html
+++ b/index.html
@@ -355,7 +355,7 @@
     </div> <!-- /.row -->
   </div> <!-- /.container -->
 </div> <!-- /#contact -->
-<div class="text-center"><iframe src="https://drive.google.com/file/d/0B_-karUEShdoZzd3M3ZvemZad0U/preview" width="640" height="480"></iframe></div>
+<div class="text-center col-md-12 col-xs-12"><iframe src="https://drive.google.com/file/d/0B_-karUEShdoZzd3M3ZvemZad0U/preview" height="500" width="400"></iframe></div>
 <div id="footer">
   <div class="container">
     <div class="row">
