Change technical progress bars

--- a/index.html
+++ b/index.html
@@ -129,22 +129,17 @@
         <ul class="progess-bars">
           <li>
             <div class="progress">
-              <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width: 90%;">Ruby 90%</div>
+              <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width: 90%;">Python 90%</div>
             </div>
           </li>
           <li>
             <div class="progress">
-              <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100" style="width: 85%;">Rails 85%</div>
+              <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%;">Ruby 80%</div>
             </div>
           </li>
           <li>
             <div class="progress">
-              <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100" style="width: 85%;">Javascript (ES2015) 85%</div>
-            </div>
-          </li>
-          <li>
-            <div class="progress">
-              <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 75%;">React 75%</div>
+              <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100" style="width: 85%;">Javascript 85%</div>
             </div>
           </li>
           <li>
@@ -154,17 +149,7 @@
           </li>
           <li>
             <div class="progress">
-              <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width: 90%;">HTML CSS 90%</div>
-            </div>
-          </li>
-          <li>
-            <div class="progress">
               <div class="progress-bar" role="progressbar" aria-valuenow="99" aria-valuemin="0" aria-valuemax="100" style="width: 99%;">Data Analysis 99%</div>
-            </div>
-          </li>
-          <li>
-            <div class="progress">
-              <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width: 70%;">Python 70%</div>
             </div>
           </li>
           <li>
