Update text on Index Cards.

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
 <head>
   <meta charset="utf-8">
-  <title>Alexander Pellas | Web Developer</title>
+  <title>Alex Pellas | Product</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" href="./images/apellas_llc_-_vectorized_logo.png">
@@ -34,9 +34,7 @@
           <ul class="social-icons">
             <li><a href="https://github.com/alexpadraic" class="fa fa-github"></a></li>
             <li><a href="https://www.linkedin.com/in/alexander-pellas" class="fa fa-linkedin"></a></li>
-            <!-- <li><a href="https://medium.com/@alexpadraic" class="fa fa-medium"></a></li> -->
             <li><a href="https://twitter.com/alexpadraic" class="fa fa-twitter"></a></li>
-            <!-- <li><a href="https://www.facebook.com/alexpellas" class="fa fa-facebook"></a></li> -->
           </ul>
         </div> <!-- /.col-md-12 -->
       </div> <!-- /.row -->
@@ -47,7 +45,7 @@
         <div id="menu-wrapper">
           <div class="row">
             <div class="logo-wrapper col-md-2 col-sm-2">
-              <h1><a href="#">Alexander</a></h1>
+              <h1><a href="#">Alex Pellas</a></h1>
             </div> <!-- /.logo-wrapper -->
             <div class="col-md-10 col-sm-10 main-menu text-right">
               <div class="toggle-menu visible-sm visible-xs"><i class="fa fa-bars"></i></div>
@@ -184,7 +182,7 @@
           <div class="service-content">
             <div class="inner-service">
               <h3>Front-End</h3>
-              <p>Honed Object-Oriented Javascript, HTML, and CSS capabilities by building numerous web applications.<br><br>Developed skills in front-end JS frameworks via Patrol, a MEAN-stack crime-mapping web-app.</p>
+              <p>Developed experience with front-end JS frameworks via Patrol, a MEAN-stack crime-mapping web-app.</p>
             </div>
           </div> <!-- /.service-content -->
         </div> <!-- /#service-1 -->
@@ -198,7 +196,7 @@
           <div class="service-content">
             <div class="inner-service">
               <h3>Back-End</h3>
-              <p>Built and manipulated SQL databases during my time at Marathon and M&N.<br><br>Have used Postgres, MongoDB, MySQL, SQLite3, along with ActiveRecord and Mongoose to serve web-apps.</p>
+              <p>Built internal tools and data dashboards at Rakuten Intelligence.<br><br>Have used every flavor of SQL except Oracle.</p>
             </div>
           </div> <!-- /.service-content -->
         </div> <!-- /#service-1 -->
@@ -212,7 +210,7 @@
           <div class="service-content">
             <div class="inner-service">
               <h3>Data Analysis & Mapping</h3>
-              <p>I have mastered the art of data visualization - I've created self-updating ArcGIS maps, a web-app with a live Google Map of crime probabilities, and countless analytical reports.<br><br>I love data.</p>
+              <p>I have extensive experience in data visualization - I've created live ArcGIS maps, a web-app with a live Google Map of crime probabilities, and countless analytical reports.<br><br>I love data.</p>
             </div>
           </div> <!-- /.service-content -->
         </div> <!-- /#service-1 -->
@@ -225,8 +223,8 @@
           </div> <!-- /.service-icon -->
           <div class="service-content">
             <div class="inner-service">
-              <h3>Python &<br>Machine Learning</h3>
-              <p>Took Machine Learning classes through Stanford and learned enough in one weekend to implement a tensorflow application on a RasPi-enabled trashcan to recognize and sort trash [all done in Python].</p>
+              <h3>Python</h3>
+              <p>Used mostly Python while a Software Engineer on the Product team at Rakuten Intelligence.<br><br>Implemented a Tensorflow application on a RasPi-enabled trashcan to recognize and sort trash using Python.</p>
             </div>
           </div> <!-- /.service-content -->
         </div> <!-- /#service-1 -->
