Change summary text

--- a/index.html
+++ b/index.html
@@ -112,14 +112,30 @@
     <div class="row">
       <div class="heading-section col-md-12 text-center">
         <h2>Summary</h2>
-        <p class="small-text">"Never let your schooling get in the way of your education"</p>
-        <p><a href="https://en.wikipedia.org/wiki/Mark_Twain">-Samuel Clemens</a></p>
+        <p class="small-text">"You make your own luck if you stay at it long enough."</p>
+        <p>-Naval Ravikant</p>
       </div> <!-- /.heading-section -->
     </div> <!-- /.row -->
 
     <div class="row">
       <div class="col-md-8 col-sm-6">
-        <p class="summary-text">I am a thoroughly curious and driven young professional with a passion for problem-solving, social justice, the environment, and tech.<br><br>Over my professional career, I have developed and sharpened a unique skill set of data analysis, mapping, web development, and financial accounting - though, the pace at which I was able to pick these up in a professional setting could be my most valuable asset. I am eager to leverage these skills for an exciting project to build both purpose and pleasure into my career.<br><br>I am a natural leader who enjoys working in teams with distributed responsibility structures, democratic decision-making, and short feedback loops. I strive to excel in every venture, and I feel I bring the right mix of drive and composure that will be valuable in any work environment. If you or your company are looking to expand your development team and feel I could be a valuable addition, don’t hesitate to reach out. My email is <a href="mailto:alexander@apellas-llc.com?Subject=Job%20Offer" target="_top">alexander@apellas-llc.com</a>.<!-- spacing for mobile viewing --><br><br>
+        <p class="summary-text">Tech Product Manager with an Engineering and Analytics background.
+          <br><br>
+Building data products for the financial, real estate, commerce, transportation, manufacturing, and public sectors. 
+          <br><br>
+Generalist that enjoys specializing
+Driven to build value and create efficiencies
+Keep a rotation of podcasts, audible, and hardcovers
+          <br><br>
+Technical
+•	JavaScript, Python, SQL, Bash
+          <br><br>
+Services
+•	Periscope, Looker, Snowflake, Matillion, AWS
+          <br><br>
+Professional 
+•	Due diligence, data architecture, operation automation, logistics, product
+          <br><br>
         </p>
       </div> <!-- /.col-md-8 -->
 
@@ -168,7 +184,7 @@
     <div class="row">
       <div class="heading-section col-md-12 text-center">
         <h2>Skills</h2>
-        <p>Back-end Analyst turned Full-Stack Web Developer</p>
+        <p>Tech Product Manager with Engineering and Analytics Experience</p>
       </div> <!-- /.heading-section -->
     </div> <!-- /.row -->
 
