Fix grammar in summary.

--- a/index.html
+++ b/index.html
@@ -123,9 +123,9 @@
           <br><br>
 Building data products for the financial, real estate, commerce, transportation, manufacturing, and public sectors. 
           <br><br>
-Generalist that enjoys specializing
-Driven to build value and create efficiencies
-Keep a rotation of podcasts, audible, and hardcovers
+Generalist that enjoys specializing.
+Driven to build value and create efficiencies.
+Maintain a healthy rotation of music, podcasts, audiobooks, and hardcovers.
           <br><br>
 Technical
 •	JavaScript, Python, SQL, Bash
