Make a change to force a deploy.

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
       <div class="heading-section col-md-12 text-center">
         <h2>Summary</h2>
         <p class="small-text">"You make your own luck if you stay at it long enough."</p>
-        <p>-Naval Ravikant</p>
+        <p>-Naval</p>
       </div> <!-- /.heading-section -->
     </div> <!-- /.row -->
 
