Fix styleing of paragraph .

--- a/index.html
+++ b/index.html
@@ -128,12 +128,15 @@
           complex problems at scale.
           </p>
           <br>
+          <p class="summary-text">
           Product<br>
           •	Customer-driven roadmapping<br>
           •	A/B Testing and Experimentation<br>
           •	SaaS<br>
           •	Product-Led Growth<br>
-          <br><br>
+          </p>
+          <br>
+          <p class="summary-text">
           Engineering<br>
           •	SQL<br>
           •	Python<br>
@@ -142,11 +145,14 @@
           •	AWS<br>
           •	GCP<br>
           <br>
+          </p>
+          <p class="summary-text">
           Analytics<br>
           •	Data Modeling (dbt)<br>
           •	Data Engineering (Airflow)<br>
           •	BI Tools (Looker, Tableau, Redash)<br>
           •	Machine Learning (Tensorflow, ARIMA)<br>
+        </p>
         </p>
       </div> <!-- /.col-md-8 -->
 
