Replace Tinypay image with envoyage.

--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
 
       <div class="portfolio-item col-md-3 col-sm-6">
         <div class="portfolio-thumb">
-          <img src="images/gallery/tinypay.jpg" alt="">
+          <img src="images/gallery/envoyage.jpg" alt="">
           <div class="portfolio-overlay">
             <h3>Envoyage</h3>
             <p>React Native universal app to serve the tugboat industry.</p>
