--- a/index.html
+++ b/index.html
@@ -157,9 +157,11 @@
           <div class="portfolio-overlay">
             <h3>Envoyage</h3>
             <p>React Native universal app to serve the tugboat industry.</p>
-            <a href="https://www.envoyage.us/" class="expand">
-              <i class="fa"></i>
-            </a>
+            <li>
+              <a href="https://www.envoyage.us/" class="expand">
+                <img src="images/envoyage.ico">
+              </a>
+            </li>
           </div> <!-- /.portfolio-overlay -->
         </div> <!-- /.portfolio-thumb -->
       </div> <!-- /.portfolio-item -->
